...
                        FilterChip(
                            onClick = { onAction(SettingsAction.OnThemeModeChange(theme)) },
                            label = { 
                                Text(
                                    text = when (theme) {
                                        ThemeMode.LIGHT -> "Light"
                                        ThemeMode.DARK -> "Dark"
                                        ThemeMode.SYSTEM -> "System"
                                    },
                                    fontSize = 12.sp
                                )
                            },
                            selected = state.currentThemeMode == theme
...
